After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 742335 - screenshots too small in HiDPI
screenshots too small in HiDPI
Status: RESOLVED FIXED
Product: gnome-software
Classification: Applications
Component: General
3.14.x
Other Linux
: Normal normal
: ---
Assigned To: GNOME Software maintainer(s)
GNOME Software maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2015-01-04 19:36 UTC by Andreas Nilsson
Modified: 2015-03-12 21:53 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
screenshot of issue (726.27 KB, image/png)
2015-01-04 19:40 UTC, Andreas Nilsson
  Details
screenshot image: Fix HiDPI scale factor calculation (2.07 KB, patch)
2015-03-12 20:57 UTC, Kalev Lember
committed Details | Review

Description Andreas Nilsson 2015-01-04 19:36:08 UTC
Using a 13" laptop with a 3200x1800 screen GNOME Software displays the screenshots of apps too small.
Comment 1 Andreas Nilsson 2015-01-04 19:40:26 UTC
Created attachment 293718 [details]
screenshot of issue
Comment 2 Richard Hughes 2015-01-26 10:28:47 UTC
Hmm, that's clearly not as designed.
Comment 3 Andreas Nilsson 2015-03-11 12:08:03 UTC
Works better in 3.15.
The big screenshots scale, but the smaller thumbnails on the right side doesn't.
Comment 4 Kalev Lember 2015-03-12 20:57:44 UTC
Created attachment 299235 [details] [review]
screenshot image: Fix HiDPI scale factor calculation

While at this, also avoid hardcoding scale factor of 2 and use the value
from gtk_widget_get_scale_factor() instead.
Comment 5 Matthias Clasen 2015-03-12 21:26:38 UTC
Review of attachment 299235 [details] [review]:

Looks good to me
Comment 6 Andreas Nilsson 2015-03-12 21:35:09 UTC
Tested the rpm here [1] and it works great on my hidpi screen!
Thanks for the quick fix!

1. http://koji.fedoraproject.org/koji/taskinfo?taskID=9212494
Comment 7 Kalev Lember 2015-03-12 21:53:03 UTC
Attachment 299235 [details] pushed as 51ac279 - screenshot image: Fix HiDPI scale factor calculation