screenshot image: Fix HiDPI scale factor calculation

While at this, also avoid hardcoding scale factor of 2 and use the value
from gtk_widget_get_scale_factor() instead.

https://bugzilla.gnome.org/show_bug.cgi?id=742335